Resolves: tdf#117372 preserve preselected sort area, if so, then extend or not

Previously if an entire column was selected, the top data row was
taken and then that X,Y position used to extend to the data area.
Else the current view's X,Y was used to extend to the data area.

Now keep a selection and use current X,Y only if there is no area
selected.

Change-Id: I19ce52bc2ebf4813b779600a4738ed1f82643aa7
Reviewed-on: https://gerrit.libreoffice.org/55348
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit 5209f21b106a2c21770073d06616458d8e06031b)
Reviewed-on: https://gerrit.libreoffice.org/55350
Tested-by: Eike Rathke <erack@redhat.com>